--- a/style.css
+++ b/style.css
@@ -46,6 +46,10 @@ body {
 	color: #e0e0e0;
 }
 
+.modal {
+	display: none;
+}
+
 .modal__header h1 {
 	margin: 0;
 	padding-bottom: 12px;
@@ -71,6 +75,6 @@ body {
 	margin-right: 5px;
 }
 
-.modal-hide {
+/*.modal-hide {
 	display: none;
-}
+}*/
